objects/pymt__Payment_Source_Field_Mapping__c.object
<CustomObject>
    <customHelpPage>pymt__Help</customHelpPage>
    <description>Custom field mappings associated with a Custom Payment Source definition</description>
    <fields>
        <fullName>pymt__Custom_Payment_Source__c</fullName>
        <label>Custom Payment Source</label>
        <referenceTo>pymt__Custom_Payment_Source__c</referenceTo>
        <relationshipLabel>Additional Field Mappings</relationshipLabel>
        <relationshipName>Payment_Source_Field_Mappings</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>pymt__Source_Field__c</fullName>
        <label>Source Field</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pymt__Target_Field__c</fullName>
        <label>Target Field</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pymt__Target_Object__c</fullName>
        <label>Target Object</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Payment</fullName>
                </value>
                <value>
                    <fullName>Recurring Payment Profile</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Payment Source Field Mapping</label>
    <nameField>
        <displayFormat>{00000}</displayFormat>
        <label>Field Mapping ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Payment Source Field Mappings</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>